# zinc-fusion-v16

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
.cursor/: settings.json
.kilo/: kilo.json
app/: globals.css  layout.tsx  page.tsx
components/: auth-button.tsx  backend-shell.tsx
docs/: CODEX-TURNOVER.md  INDEX.md  MASTER_PLAN.md  agent-safety-gates.md  what-we-learned-from-our-mistakes.md
hooks/: pre-commit  pre-push
lib/: auth-mode.ts
python/: pyproject.toml
python/fusion/: artifacts.py  build_local_symbol_time_panel.py  build_matrix.py  config.py  generate_specialist_features.py  generate_specialist_signals.py  load_local_db.py  load_local_options_from_glbx.py  pipeline.py  promote_to_cloud.py  sync_cloud_sources_to_local.py  train_models.py  training_readiness_gate.py  zl_duckdb_pipeline.py
python/tests/: test_train_models_contract.py  test_training_readiness_gate_contract.py  test_zl_duckdb_pipeline.py
quality/: BUGS.md  COMPLETENESS_REPORT.md  CONTRACTS.md  COVERAGE_MATRIX.md  EXPLORATION.md  INDEX.md  PROGRESS.md  QUALITY.md  REQUIREMENTS.md  RUN_CODE_REVIEW.md  RUN_INDEX.md  RUN_INTEGRATION_TESTS.md  RUN_SPEC_AUDIT.md  RUN_TDD_TESTS.md  TDD_TRACEABILITY.md  citation_semantic_check.json  compensation_grid.json  exploration_role_map.json  requirements_manifest.json  run_state.jsonl  test_functional.py  test_regression.py  use_cases_manifest.json
scripts/: backfill_zl_daily_history.py  fusion_guard.py  (+5 more)
(+316 files in other folders)
